manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "todo_app-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "todo_app"
  template:
    metadata:
      labels:
        app: "todo_app"
    spec:
      containers:
        - name: "todo_app"
          image: ceappacr.azurecr.io/todo_app
          ports:
          - containerPort: 8080
