manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "todo_app-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "82023143.ce-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82023143
            port:
              number: 8080
        pathType: Prefix
